# kallisto

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  noxfile.py  paper.bib  paper.md  pyproject.toml
.github/workflows/: black.yml  codeql.yml  coverage.yml  draft-pdf.yml  tests.yml
src/: atom.py  formula.py  grid.py  methods.py  molecule.py  rmsd.py  sort.py  sterics.py  symbols.py  units.py
src/data/: __init__.py  alpha.py  vdw.py
src/kallisto/: atom.py  console.py  grid.py  methods.py  molecule.py  rmsd.py  sort.py  sterics.py  units.py
src/kallisto/data/: __init__.py  alpha.py  vdw.py
src/kallisto/reader/: strucreader.py  turbomole.py  xyz.py
src/kallisto/utils/: __init__.py  alpha.py
src/reader/: strucreader.py  turbomole.py  xyz.py
src/utils/: __init__.py  alpha.py
tests/: conftest.py  store.py  test_alp.py  test_atom.py  test_bonds.py  test_cli.py  test_cns.py  test_eeq.py  test_exs.py  test_grid.py  test_lig.py  test_molecule.py  test_prox.py  test_rms.py  test_stm.py  test_strucreader.py  test_turbomole.py  test_vdw.py  test_version.py  test_xyz.py
tests/structures/: Et.xyz  H.xyz  Me.xyz  alanine-glycine.xyz  antcyp.coord  c2h2.coord  c2h4.coord  c2h6.coord  ch.coord  ch_2.coord  cmet.xyz  graphene.xyz  h2.coord  he.coord  iridium.xyz  li.coord  li.xyz  nh_case.xyz  pyridine_c.xyz  pyridine_crest.coord  pyridine_pbeh3c.coord  tpm.coord
tests/structures/polarizabilities/: 1.coord  10.coord  11.coord  12.coord  13.coord  14.coord  15.coord  16.coord  17.coord  18.coord  19.coord  2.coord  20.coord  21.coord  22.coord  23.coord  25.coord  3.coord  4.coord  5.coord  6.coord  7.coord  8.coord  9.coord  al1.xyz  c60.xyz
